kubernetes/gateway/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: production
  labels:
    app: gateway
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: marinastancu/gateway:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: production
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
