kubernetes/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: production
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              serviceName: gateway
              servicePort: 8080
